--- a/collections/pom.xml
+++ b/collections/pom.xml
@@ -2,5 +2,46 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.edu.oop</groupId>
   <artifactId>collections</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version> 
+  <packaging>jar</packaging> 
+  <dependencies> 
+  	<!-- https://mvnrepository.com/artifact/junit/junit -->  	
+	<!-- dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.13.1</version>
+	    <scope>test</scope>
+	</dependency-->
+	
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+	<dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-api</artifactId>
+	    <version>5.7.0</version>
+	    <scope>test</scope>
+	</dependency>	
+  </dependencies>
+  
+  <build> 
+  	<plugins>
+  		<plugin>  			 
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-compiler-plugin</artifactId>
+		    <version>3.8.1</version> 
+		    <configuration>
+		    	<source>1.8</source>
+		    	<target>1.8</target>
+		    </configuration>
+  		</plugin>
+  		
+  		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+  		 <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
+        </plugin>
+        
+  	</plugins>
+  </build>
+  
 </project>
