--- a/exceptions/pom.xml
+++ b/exceptions/pom.xml
@@ -2,5 +2,15 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.edu.oop</groupId>
   <artifactId>exceptions</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>  
+  
+   <dependencies> 
+  	<!-- https://mvnrepository.com/artifact/junit/junit -->  	
+	<dependency>
+	    <groupId>com.edu.oop</groupId>
+	    <artifactId>collections</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>	     
+	</dependency >
+	 
+  </dependencies>
 </project>
