--- a/job-crawler/pom.xml
+++ b/job-crawler/pom.xml
@@ -6,18 +6,18 @@
   <name>Web crawler</name>
   <description>web crawler</description>  
   <properties>
-		<start-class>com.mse.pesho.crawler.core.Runner</start-class>
+		<!-- start-class>com.mse.pesho.crawler.core.CrawlerApp</start-class-->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
   <dependencies> 
-	<dependency>
+	<!-- dependency>
 	    <groupId>org.openjfx</groupId>
 	    <artifactId>javafx</artifactId>
 	    <version>11</version>
 	    <type>pom</type>
-	</dependency>
+	</dependency-->
 	<dependency>
 	    <groupId>org.openjfx</groupId>
 	    <artifactId>javafx-fxml</artifactId>
